Alignment and Layout Fixing

--- a/task 1/style.css
+++ b/task 1/style.css
@@ -24,7 +24,6 @@ html, body {
 body {
 	margin: 0;
 	padding: 0;
-	height: 100vh;
 	font-size: 1rem;
 	line-height: 1.75;
 	position: relative;
@@ -141,7 +140,7 @@ a:hover, .brand-name:hover, .nav-content:hover { letter-spacing: calc(var(--lett
 	background-position: center;
 	background-repeat: no-repeat;
 	background-color: var(--black);
-	/* background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url(images/nathan-anderson-iYO-EGosrCo-unsplash.jpg); */
+	background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url(images/nathan-anderson-iYO-EGosrCo-unsplash.jpg);
 }
 .main-text {
 	top: 50%;
@@ -154,10 +153,10 @@ a:hover, .brand-name:hover, .nav-content:hover { letter-spacing: calc(var(--lett
 }
 .left-section, .right-section { width: 45%; }
 .main-form {
+	margin: 0;
 	border: none;
-	margin: 0.75rem 0;
-	padding: 0.75rem 1rem;
 	text-align: center;
+	padding: 0.75rem 1rem;
 	border-radius: 0.25rem;
 	width: calc(100% - 2rem);
 	height: calc(100% - 1.5rem);
